--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,16 +2,23 @@
 <html>
 <body>
 
-<h1>JavaScript Comparison</h1>
-<h2>The === Operator</h2>
+<h2>JavaScript if .. else</h2>
 
-<p>Assign 5 to x, and display the value of the comparison (x === 5):</p>
+<p>A time-based greeting:</p>
 
 <p id="demo"></p>
 
 <script>
-let x = 5;
-document.getElementById("demo").innerHTML = (x === 5);
+const hour = new Date().getHours(); 
+let greeting;
+
+if (hour < 18) {
+  greeting = "Good day";
+} else {
+  greeting = "Good evening";
+}
+
+document.getElementById("demo").innerHTML = greeting;
 </script>
 
 </body>
